--- a/styles/mf.css
+++ b/styles/mf.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 * {
@@ -18,6 +19,7 @@ body {
     padding: 1rem;
 }
 
+
 .content {
     display: flex;
     flex-direction: column;
@@ -27,7 +29,10 @@ body {
 aside img {
     width: 80%; /* Ajustar para telas pequenas */
     margin-bottom: 1rem;
+    margin: auto;
+    display: block;
 }
+
 
 aside h1 {
     font-size: 2.8rem; /* Fonte menor para dispositivos móveis */
@@ -43,11 +48,36 @@ main {
     width: 100%;
     border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.367);
-    padding: 2rem;
+    padding: 1rem;
 }
 
 main h2 {
     font-size: 2rem; /* Ajustar tamanho da fonte */
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.cadastro{
+    margin: auto;
+    display: block;
+    width: 80%;
+}
+
+
+.actions-p02 a{
+    background-color:var(--cor02);
+    width: 40vw;
+    display: block;
+    margin: auto;
+    height: 3.6rem;
+    font-size: 1.3rem;
+    border-radius: 7px;
+    padding: 1rem 5rem;
+    border: none;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.173);
+    text-decoration: none;  
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
     text-align: center;
 }
 
@@ -79,6 +109,25 @@ main .actions a + a {
     margin-top: 2rem;
 }
 
+main form input {
+    margin: auto;
+    width: 30rem;
+    height: 4rem;
+    border: 1px solid black;
+    border-radius: 1.2rem;
+
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    flex-grow: 1;
+}
+
+main form label {
+    margin-right: 1rem;
+    min-width: 10rem
+   
+}
+
 footer {
    text-align: center;
     margin-top: 2rem;
@@ -95,212 +144,39 @@ footer p {
     color: rgb(146, 83, 83);
 }
 
+  
+  /* Small devices (portrait tablets and large phones, 600px to 768px) */
+  @media  screen and (min-width: 600px) and (max-width: 768px) {
+   .content{
+    display: grid;
+    grid-template-areas: 
+    ". . ."
+    "imagem form form"
+    "imagem form form"
+    "imagem form form"
+    ;
+   }
 
-/* Estilos para telas maiores (tablet e desktop) */
-@media screen and (min-width: 768px) and (max-width: 1024px){
-    .content {
-        display: grid;
-        grid-template-areas:
-            ". . .  . ."
-            ". hero . forms ."
-            ". hero  . forms ."
-            ". . .  . .";
-    /*     grid-template-columns: 1fr 2fr;
-        grid-template-rows: auto; */
-        grid-template-rows: 20rem;
-    }
+   aside{
+    grid-area: imagem;
+    width: 80%;
+    margin: auto;
+   }
 
-    aside {
-        grid-area: hero;
-        justify-self: center;
-    }
-
-    aside h1 {
-        font-size: 4rem;
-    }
-
-    aside img {
-        width: 35rem;
-    }
-
-    main {
-        grid-area: forms;
-        padding: 4.4rem 5.7rem;
-        max-width: 50rem;
-        margin: 0 auto;
-    }
-
-    main h2 {
-        font-size: 2.4rem;
-        text-align: left;
-    }
-
-    main .actions a {
-        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.489);
-        width: 25rem;
-        height: 3.5rem;
-        font-size: 1.6rem;
-    }
-
-    footer {
-        text-align: left;
-    }
-}
-
-@media screen and (min-width:1025px){
-    .content {
-        display: grid;
-        grid-template-areas:
-            ". . .  . ."
-            ". hero  . forms ."
-            ". hero  . forms ."
-            ". . . . .";
-    /*     grid-template-columns: 1fr 2fr;
-        grid-template-rows: auto; */
-        grid-template-rows: 20rem;
-    }
-
-    aside {
-        grid-area: hero;
-        justify-self: center;
-    }
-
-    aside img {
-        width: 35rem;
-    }
-
-    main {
-        grid-area: forms;
-        padding: 4.4rem 5.7rem;
-        max-width: 50rem;
-        margin: 0 auto;
-    }
-
-    main h2 {
-        font-size: 2.4rem;
-        text-align: left;
-    }
-
-    main .actions a {
-        width: 25rem;
-        height: 3.5rem;
-        font-size: 1.6rem;
-        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.489);
-    }
-    }
-
-    footer {
-        text-align: left;
-    }
-
-    @media screen and (min-width:1024px) {
-
-         .content {
-        display: grid;
-        grid-template-areas:
-            ". . .  . ."
-            ". hero . forms ."
-            ". hero  . forms ."
-            ". . .  . .";
-    /*     grid-template-columns: 1fr 2fr;
-        grid-template-rows: auto; */
-        grid-template-rows: 20rem;
-    }
-
-    aside {
-        grid-area: hero;
-        justify-self: center;
-    }
-
-    aside h1 {
-        font-size: 4rem;
-    }
-
-    aside img {
-        width: 30rem;
-    }
-
-    main {
-        grid-area: forms;
-        padding: 4.4rem 5.7rem;
-        max-width: 50rem;
-        margin: 0 auto;
-    }
-
-    main h2 {
-        font-size: 2.4rem;
-        text-align: left;
-    }
-
-    main .actions a {
-        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.489);
-        width: 25rem;
-        height: 3.5rem;
-        font-size: 1.6rem;
-    }
-
-    footer {
-        text-align: left;
-    }
-}
-
-@media screen and (min-width:1025px){
-    .content {
-        display: grid;
-        grid-template-areas:
-            ". . .  . ."
-            ". hero  . forms ."
-            ". hero  . forms ."
-            ". . . . .";
-    /*     grid-template-columns: 1fr 2fr;
-        grid-template-rows: auto; */
-        grid-template-rows: 20rem;
-    }
-
-    aside {
-        grid-area: hero;
-        justify-self: center;
-    }
-
-    aside img {
-        width: 45rem;
-    }
-
-    main {
-        grid-area: forms;
-        padding: 4.4rem 5.7rem;
-        max-width: 60rem;
-        height: 40rem;
-        margin: 0 auto;
-    }
-
-    main h2 {
-        font-size: 2.4rem;
-        text-align: left;
-    }
-
-    .actions{
-        margin: 4rem;
-    }
-
-    main .actions a {
-        width: 35rem;
-        height: 4.5rem;
-        font-size: 1.6rem;
-        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.489);
-    }
+   main{
+    grid-area: form;
+   }
+  }
+  
+  /* Medium devices (landscape tablets, 769px to 1024px) */
+  @media screen and (min-width: 769px) and (max-width: 1024px) {
+   
+  }
+  
+  /* Large devices (desktops, 1025px and up) */
+  @media screen and (min-width: 1025px) {
     
-    footer {
-        text-align: left;
-        margin-top: 6rem;
-    }
-
-
-}
-    
-    
-
-
-
+  }
+  
 
 
